Fixes incorrect dark mode background color in subscription area

--- a/assets/css/misc/dark.css
+++ b/assets/css/misc/dark.css
@@ -115,6 +115,6 @@
     box-shadow: 0 5px 15px rgba(200,200,200,0.2);
 }
 
-.dark-mode .gh-subscribe {
+.dark-mode .subscription-container {
     background-color: var(--color-dark-gray);
 }
